@@ -29,7 +29,7 @@ subprojects {
         options.encoding = 'UTF-8'
         options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
     }
-    
+
     test {
         useJUnitPlatform()
     }
@@ -121,6 +121,7 @@ project(':WorldPainter:WPGUI') {
         applicationName = 'WorldPainter'
         applicationDefaultJvmArgs = [
             '--add-exports=java.desktop/sun.swing=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.awt.windows=ALL-UNNAMED',
             '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
             '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
             '-Djava.awt.headless=false'
@@ -176,11 +177,11 @@ project(':WorldPainter:WPGUI') {
         doLast {
              windowsScript.text = windowsScript.text.replaceAll(
                 'set CLASSPATH=.*',
-                'set CLASSPATH=%APP_HOME%\\\\lib\\\\*'
+                'set CLASSPATH=%APP_HOME%\\\\lib\\\\WPDynmapPreviewer-' + project.version + '.jar;%APP_HOME%\\\\lib\\\\*'
             )
              unixScript.text = unixScript.text.replaceAll(
                 'CLASSPATH=.*',
-                'CLASSPATH=\\$APP_HOME/lib/*'
+                'CLASSPATH=\\$APP_HOME/lib/WPDynmapPreviewer-' + project.version + '.jar:\\$APP_HOME/lib/*'
             )
         }
     }
